--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
   font-weight: 600;
   background-color: var(--clr-background);
   color: var(--clr-text);
-  transition: 0.3s ease;
+  transition: background-color 0.3s ease;
 }
 
 h1,
